030-software/fluxcd/apps/sidekick/api/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api
  annotations:
    configmap.reloader.stakater.com/reload: common-env,config
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "3030"
    spec:
      serviceAccountName: api
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: api
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: api
      containers:
        - name: api
          image: shokohsc/moleculer-sidekick
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          command: ["npm"]
          args: ["run", "start"]
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
            - name: metrics
              containerPort: 3030
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              port: http
              path: /status/readiness
          volumeMounts:
            - name: shared
              mountPath: /mnt/images
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 512Mi
      volumes:
        - name: shared
          nfs:
            server: genji.home.arpa
            path: /shared/wallpapers
