030-software/fluxcd/apps/sidekick/api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
    - port: 3030
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app: api
