030-software/fluxcd/apps/sidekick/api/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sidekick
spec:
  hostnames:
    - sidekick.${domain}
  parentRefs:
    - name: cilium
      namespace: cilium
  rules:
    - backendRefs:
        - name: api
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - cors:
            allowOrigins:
            - https://dev.dashboard.${domain}
            - https://preview.dashboard.${domain}
            - https://dashboard.${domain}
            - https://dev.postal.${domain}
            - https://preview.postal.${domain}
            - https://postal.${domain}
            allowMethods:
            - GET
            - OPTIONS
            allowHeaders:
            - DNT
            - X-CustomHeader
            - Keep-Alive
            - User-Agent
            - X-Requested-With
            - If-Modified-Since
            - Cache-Control
            - Content-Type
            allowCredentials: false
            maxAge: 3600
          type: CORS
