030-software/fluxcd/apps/sidekick/api/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sidekick
  annotations:
    kubernetes.io/ingress.class: ${ingressClass}
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PATCH, POST,OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,Identifier"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  rules:
  - host: sidekick.${domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 3000
  tls:
  - hosts:
    - sidekick.${domain}
    secretName: sidekick-cert
